@@ -1,3 +1,8 @@
+2017-07-26  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/71570
+	* g++.dg/cpp0x/lambda/lambda-ice17.C: New.
+
 2017-07-26  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR target/81563
