@@ -1,3 +1,9 @@
+2017-07-26  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/71570
+	* lambda.c (add_capture): Early return if we cannot capture by
+	reference.
+
 2017-07-26  Jason Merrill  <jason@redhat.com>
 
 	P0702R1 - List deduction of vector.
